--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-app",
   "version": "0.1.0",
+  "homepage": "https://sarathyvj7.github.io/boat",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,8 +22,12 @@
     "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+
   },
+
   "scripts": {
+       "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
